package executableGames.games;

public class Game {
    private final int NUMBEROFPLAYERS = 8;
    //TypeGame typeGame;

    public void introduction(){

    }

}
