package executablegames.utils.games.players;

import java.util.ArrayList;
import java.util.List;

public class ListOfResult {
    public List<Result> results = new ArrayList<>();
    public void add(Result result) {
        results.add(result);
    }
}
