package games.players;

public class ListOfPlayers {
    Player[] players;

    public void getPlayers(int numberOfPlayers) {}
    public void createPlayer() {}
}
